--- a/angular.json
+++ b/angular.json
@@ -41,7 +41,8 @@
             "outputMode": "server",
             "ssr": {
               "entry": "src/server.ts"
-            }
+            },
+            "baseHref": "/angular-todo-app/"
           },
           "configurations": {
             "production": {
