--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:angular-todo-app": "node dist/angular-todo-app/server/server.mjs",
-    "deploy": "ng deploy --base-href=/angular-todo-app/"
+    "deploy": "ng build --configuration production && cp .nojekyll dist/angular-todo-app/browser/.nojekyll && cp dist/angular-todo-app/browser/index.html dist/angular-todo-app/browser/404.html && angular-cli-ghpages --dir=dist/angular-todo-app/browser"
   },
   "private": true,
   "dependencies": {
@@ -18,7 +18,7 @@
     "@angular/forms": "^19.2.0",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
-    "@angular/platform-server": "^19.2.0",
+
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
