--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -15,5 +15,11 @@
   ],
   "include": [
     "src/**/*.d.ts"
+  ],
+  "exclude": [
+    "src/app/app.config.server.ts",
+    "src/app/app.routes.server.ts",
+    "src/main.server.ts",
+    "src/server.ts"
   ]
 }
